# clinical-ml-agent

./: .gitignore  LICENSE  NEXT_STEPS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/app/: run.py
src/extract/: extract_paper.py  normalize.py  schema.py
src/ingest/: chunk.py  parse_pdf.py
src/rag/: embed.py  retrieve.py  vector_store.py
src/synth/: evidence_table.py  report_writer.py
tests/: test_ingest.py  test_normalize.py  test_rag.py  test_schema.py  test_smoke.py  test_synth.py
